Rename project to Persona Machine
- Updated all references from Persona Engine to Persona Machine
- Changed 'Personality Parameters' to 'Define Persona'
- Made two columns equal height with flexbox layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Persona Engine - AI Agent Personality Builder
+Persona Machine - AI Agent Personality Builder
 Copyright (c) 2025 Ray Massie
 
 Build custom AI agent personas using behavioral and psychological trait frameworks
@@ -9,7 +9,7 @@ Build custom AI agent personas using behavioral and psychological trait framewor
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Persona Engine - AI Agent Personality Builder</title>
+    <title>Persona Machine - AI Agent Personality Builder</title>
     <meta name="description" content="Build custom AI agent personas using behavioral and psychological trait frameworks from Behavioral Humanism research.">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,7 +17,7 @@ Build custom AI agent personas using behavioral and psychological trait framewor
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>Persona Engine</h1>
+            <h1>Persona Machine</h1>
             <p>Build custom AI agent personalities</p>
         </div>
 
@@ -26,7 +26,7 @@ Build custom AI agent personas using behavioral and psychological trait framewor
             <!-- Builder Panel -->
             <div class="builder-panel">
                 <div class="panel-header">
-                    <h2>Personality Parameters</h2>
+                    <h2>Define Persona</h2>
                     <div class="panel-actions">
                         <button id="random-btn" class="btn-action">RANDOM</button>
                         <button id="clear-all-btn" class="btn-action">CLEAR ALL</button>
@@ -479,7 +479,7 @@ Build custom AI agent personas using behavioral and psychological trait framewor
                 </div>
                 <div class="preview-content" id="preview-content">
                     <div class="preview-placeholder">
-                        <p>Select personality parameters to generate your persona</p>
+                        <p>Select traits and adjust dimensions to generate your persona</p>
                     </div>
                 </div>
             </div>
