--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ Build custom AI agent personas using behavioral and psychological trait framewor
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2.0"></script>
 </body>
 </html>
 
